--- a/css/valentine.css
+++ b/css/valentine.css
@@ -34,3 +34,13 @@ img {
 	bottom: 20px;
 	opacity: 0.85;
 }
+
+#starfield {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    z-index: -1;
+}
+
